@@ -1,6 +1,8 @@
 1.0.8:
 	- bugfix: quotes in Makefile.in:install
 	- bugfix: s/TitleButtons/TitleButtonsRight/ in win95/default.theme
+	- bugfix: segfault in icehelp
+	- bugfix: usage screen for icehelp
 
 1.0.7: 2001-03-13
 	- feature: consider horiz/vert border when maximizing (heiky, slow)
